--- a/package.json
+++ b/package.json
@@ -1,51 +1,31 @@
 {
-  "name": "portfolio-server",
+  "name": "portfolio-website",
   "version": "1.0.0",
-  "description": "Backend API for Zahrea Franklin's portfolio assistant (TrulyBot)",
-  "main": "server.mjs",
-  "type": "module",
+  "private": true,
+  "homepage": "https://zahreafranklin.github.io/",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.15",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.3",
+    "axios": "^1.7.9"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.5",
-    "@mui/material": "^7.3.5",
-    "@mui/styles": "^6.4.8",
-    "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2",
-    "react-router-dom": "^7.9.5",
-    "react-scripts": "^5.0.1"
+  "eslintConfig": {
+    "extends": ["react-app", "react-app/jest"]
   },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "portfolio",
-    "ai-assistant",
-    "express",
-    "openai",
-    "zahrea-franklin"
-  ],
-  "author": "Zahrea Franklin",
-  "license": "MIT",
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
