--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-website",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://zahreafranklin.github.io/",
+  "homepage": "https://zahreafranklin.github.io",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
